<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/prefs_category_table_view_settings_summary"
        android:title="@string/prefs_category_table_view_settings_title">
        <EditTextPreference
            android:id="@+id/table_row_count"
            android:defaultValue="50"
            android:key="@string/preference_settings_table_row_count_key"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/preference_settings_table_row_count_summary"
            android:title="@string/preference_settings_table_row_count_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/prefs_category_export_settings_summary"
        android:title="@string/prefs_category_export_settings_title">
        <EditTextPreference
            android:id="@+id/prefs_max_export_query_count"
            android:defaultValue="50"
            android:key="@string/preference_max_export_query_count_key"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/prefs_max_export_query_count_summary"
            android:title="@string/prefs_max_export_query_count_title" />
        <ListPreference
            android:dialogTitle="@string/preference_export_charset_dialog_title"
            android:entries="@array/export_charset"
            android:entryValues="@array/export_charset"
            android:key="@string/preference_export_charset_key"
            android:summary="@string/preference_export_charset_summary"
            android:title="@string/preference_export_charset_title" />
    </PreferenceCategory>



</PreferenceScreen>